--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "valibot": "1.1.0"
   },
   "devDependencies": {
-    "@pandacss/dev": "^1.4.2",
-    "@pandacss/types": "^1.4.2",
+    "@pandacss/dev": "^1.4.3",
+    "@pandacss/types": "^1.4.3",
     "@solidjs/testing-library": "0.8.10",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -44,28 +44,28 @@
     "@tsconfig/recommended": "^1.0.10",
     "@tsconfig/strictest": "^2.0.6",
     "@types/chrome": "^0.1.24",
-    "@types/node": "^22.18.10",
+    "@types/node": "^22.18.12",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
-    "browserslist": "^4.26.3",
+    "browserslist": "^4.27.0",
     "browserslist-to-esbuild": "^2.1.1",
-    "eslint": "9.37.0",
+    "eslint": "^9.38.0",
     "eslint-config-love": "^133.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
-    "happy-dom": "^20.0.2",
+    "happy-dom": "^20.0.8",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "solid-devtools": "^0.34.4",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.1",
-    "vite": "^7.1.10",
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.11",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-solid": "2.11.9",
+    "vite-plugin-solid": "^2.11.10",
     "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^3.2.4"
   },
