--- a/package.json
+++ b/package.json
@@ -24,45 +24,45 @@
     "*.css"
   ],
   "dependencies": {
-    "@tanstack/solid-form": "^1.23.7",
+    "@tanstack/solid-form": "^1.27.4",
     "@total-typescript/ts-reset": "^0.6.1",
     "date-fns": "^4.1.0",
-    "focus-trap": "^7.6.5",
+    "focus-trap": "^7.6.6",
     "remeda": "^2.32.0",
-    "solid-js": "1.9.9",
-    "type-fest": "^5.1.0",
-    "valibot": "1.1.0"
+    "solid-js": "^1.9.10",
+    "type-fest": "^5.3.1",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
-    "@pandacss/dev": "^1.4.3",
-    "@pandacss/types": "^1.4.3",
+    "@pandacss/dev": "^1.7.1",
+    "@pandacss/types": "^1.7.1",
     "@solidjs/testing-library": "0.8.10",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
-    "@tsconfig/node22": "^22.0.2",
-    "@tsconfig/recommended": "^1.0.10",
-    "@tsconfig/strictest": "^2.0.6",
-    "@types/chrome": "^0.1.24",
-    "@types/node": "^22.18.12",
+    "@tsconfig/node22": "^22.0.5",
+    "@tsconfig/recommended": "^1.0.13",
+    "@tsconfig/strictest": "^2.0.8",
+    "@types/chrome": "^0.1.32",
+    "@types/node": "^22.19.3",
     "@vitest/coverage-v8": "^3.2.4",
-    "autoprefixer": "^10.4.21",
-    "browserslist": "^4.27.0",
+    "autoprefixer": "^10.4.23",
+    "browserslist": "^4.28.1",
     "browserslist-to-esbuild": "^2.1.1",
-    "eslint": "^9.38.0",
-    "eslint-config-love": "^133.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-love": "^137.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.4.0",
-    "happy-dom": "^20.0.8",
+    "globals": "^16.5.0",
+    "happy-dom": "^20.0.11",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "solid-devtools": "^0.34.4",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2",
-    "vite": "^7.1.11",
+    "typescript-eslint": "^8.50.0",
+    "vite": "^7.3.0",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-solid": "^2.11.10",
