--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "*.css"
   ],
   "dependencies": {
-    "@tanstack/solid-form": "^1.27.4",
+    "@tanstack/solid-form": "^1.27.5",
     "@total-typescript/ts-reset": "^0.6.1",
     "date-fns": "^4.1.0",
     "focus-trap": "^7.6.6",
@@ -36,8 +36,8 @@
   "devDependencies": {
     "@pandacss/dev": "^1.7.1",
     "@pandacss/types": "^1.7.1",
-    "@solidjs/testing-library": "0.8.10",
-    "@testing-library/dom": "10.4.1",
+    "@solidjs/testing-library": "^0.8.10",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
     "@tsconfig/node22": "^22.0.5",
@@ -45,12 +45,12 @@
     "@tsconfig/strictest": "^2.0.8",
     "@types/chrome": "^0.1.32",
     "@types/node": "^22.19.3",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.23",
     "browserslist": "^4.28.1",
     "browserslist-to-esbuild": "^2.1.1",
     "eslint": "^9.39.2",
-    "eslint-config-love": "^137.0.0",
+    "eslint-config-love": "^140.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -67,7 +67,7 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-solid": "^2.11.10",
     "vite-plugin-static-copy": "^3.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.16"
   },
   "packageManager": "pnpm@10.26.0+sha512.3b3f6c725ebe712506c0ab1ad4133cf86b1f4b687effce62a9b38b4d72e3954242e643190fc51fa1642949c735f403debd44f5cb0edd657abe63a8b6a7e1e402",
   "pnpm": {
